--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="preload" href="font/Roboto-Bold.woff" as="font"  crossorigin> -->
     <link rel="stylesheet" href="./css/style.min.css">
 
-    <title>Document</title>
+    <title>Калькултор личного бюджета</title>
 </head>
 <body>
 <h1>Калькулятор личного бюджета</h1>
@@ -17,12 +17,12 @@
 
         <div class="data">
             <div class="salary">
-                <div class="salary-title title">Месячный доход*</div>
+                <div class="title">Месячный доход*</div>
                 <input type="text" class="salary-amount" placeholder="Сумма">
             </div>
 
             <div class="income">
-                <div class="income-title title">Дополнительный доход</div>
+                <div class="title">Дополнительный доход</div>
                 <div class="income-items">
                     <input type="text" class="income-title" placeholder="Наименование">
                     <input type="text" class="income-amount" placeholder="Сумма">
@@ -38,7 +38,7 @@
             </div>
 
             <div class="expenses">
-                <div class="expenses-title title">Обязательные расходы</div>
+                <div class="title">Обязательные расходы</div>
                 <div class="expenses-items">
                     <input type="text" class="expenses-title" placeholder="Наименование">
                     <input type="text" class="expenses-amount" placeholder="Сумма">
@@ -132,7 +132,6 @@
 
     </div>
 </section>
-
 <script src="JS/script.js"></script>
 </body>
 </html>
